<resources>
    <string name="app_name">CoffeeOrder</string>
    <string name="toppings">Toppings</string>
    <string name="whipped_cream">whipped cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="quantity">quantity</string>
    <string name="order_summary">Order Summary</string>
    <string name="thank_you">Thank You\n</string>
    <string name="total">Total: $</string>
    <string name="add_whipped_cream">Added whipped Cream </string>
    <string name="quantity_value">Quantity :</string>
    <string name="added_chocolate">Added Chocalate </string>
    <string name="name">\Name: </string>
</resources>
