<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

<EditText
    android:id="@+id/Name_field"
    android:hint="Name"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"
    android:layout_marginTop="5dp"
    android:inputType="textMultiLine"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="16dp"
        android:text="@string/toppings"
        android:textAllCaps="true"
        android:textSize="16sp"

        />

    <CheckBox
        android:id="@+id/whipped_cream_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/whipped_cream"
       android:padding="24dp"
        android:layout_marginBottom="10dp"
        android:textSize="16sp"/>

      <CheckBox
          android:id="@+id/chocolate_checkbox"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:paddingLeft="24dp"
          android:text="@string/chocolate"
          android:textSize="16sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="10dp"
        android:text="@string/quantity"
        android:textAllCaps="true"
        android:textSize="16sp"

        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/incrementText"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:onClick="increment"

            android:text="+" />

        <TextView
            android:id="@+id/quantity_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="0"
            android:textSize="20dp" />

        <Button
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginLeft="10dp"
            android:onClick="decrement"

            android:text="-"

            />

    </LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_marginLeft="10dp"
        android:padding="4dp"
        android:text="@string/order_summary"
        android:textAllCaps="true"
        android:textSize="16sp" />




    <TextView
        android:id="@+id/messagetext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="6dp"
        android:padding="6dp"
        android:textSize="20sp" />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="16dp"
        android:onClick="submitOrder"
        android:text="order"
        android:textAllCaps="true"
        android:textSize="16sp" />


</LinearLayout>
</ScrollView>